# 3MF-Analyzer

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml  rerun.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
data/: evaluation-results.md  notes.md  software.md  test-descriptions.md
data/description/: 00_3mf.yaml  01_xml-cs.yaml  02_xml.yaml  03_3mf-mutated.yaml  03_generated.yaml  04_opc.yaml  05_zip.yaml  description_texts.yaml
data/evaluation/: README.md  dummy.yaml  stats.json
data/evaluation/3dbuilder/: info.yaml
data/evaluation/3dviewer/: info.yaml
data/programs/: config.yaml  fusion-add-in.py
data/xsd/: 3mf-core.xsd  3mf-materials.xsd  3mf-production.xsd  3mf-slice.xsd  core-plus-materials.xsd  core-plus-production.xsd  core-plus-slice.xsd  materials-types.xsd  production-types.xsd  slice-types.xsd
src/: 3dmodel.model  test.py
src/3mf-analyzer/: dataclasses.py
src/lib3mf_sdk_v2.1.1/: version.txt
src/process_monitor/: 3DViewer_bl01.json  FlashPrint_bl01.json  LycheeSlicer_bl02.json  PaintStudio_bl01.json  PaintStudio_bl02.json  README.md  notes.md  process_log_3DViewer.exe.json  process_log_Builder3D.exe.json  process_log_FlashPrint.exe.json  process_log_LycheeSlicer.exe.json  process_log_PaintStudio.View.exe.json  process_log_Slic3r.exe.json  process_log_Z-SUITE.exe.json  process_log_craftApp.exe.json  process_log_ideaMaker.exe.json  process_monitor.py
src/testbed/: __init__.py  __main__.py  utils.py
src/threemf_analyzer/: __init__.py  __main__.py  dataclasses.py  utils.py
(+63437 files in other folders)
